# loglinearcorrection

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yml
loglinearcorrection/: __init__.py  correction_estimator.py  data_generating_processes.py  dependence_funcs.py  ml_tasks.py  ppml_consistency.py
raw-data/acemogluRobotsJobsEvidence2020/: .gitattributes  Acemoglu_Restrepo_Table2_logDV_data.csv
raw-data/besedesPhaseOutTariffs2020/: .gitattributes  dataCC_Mex_districts.dta  data_consistentCodes.dta  data_rawCodes.dta  data_rawPreMerge.dta  schedulesUS.dta
raw-data/besedesPhaseOutTariffs2020/appendix/: d_Can.dta  d_Mex.dta
raw-data/suarezserratoWhoBenefitsState2016/: ILS_3_shocks_6_parm_housing.dta
replications/code/: Donaldson2018.py
replications/data/Donaldson_Railroads/: Dave_Donaldson_Railroads_tbl4.csv
results/: continuous_correction_independent_absolute.csv  continuous_correction_independent_squared.csv
scripts/: assumption_test.py  continous_correction.py  correction_example_usage.py  ppml_consistency.py  rct_correction.py  reset_test_rejection.py  test_convergence_ppml.py  tst_convergence_ols.py  tst_convergence_ppml.py
scripts/replications/acemoglurestrepo2020/: Acemoglu_Restrepo_tbl2.py
scripts/replications/besedesPhaseOutTariffs2020/: besedesPhaseOutTariffs2020.py  chart.py
scripts/replications/donaldsonRailroadsRajEstimating2018/: donaldson.py
scripts/replications/suarezserratoWhoBenefitsState2016/: data_processing.py  estimation_SZ.py  exportLatexTableSZ2.py  master_SZ.py  ppml_loglinear_corrected.py  rf_estimation_SZ.py  rf_incidence.py  struct_incidence.py  table1.py  table2.py
scripts/simulations/: bias-variance-tradeoff.py  bootstrap_vs_asymptotic.py
scripts/simulations/bias-variance-tradeoff/: bias-variance-tradeoff.py  (+2 more)
src/: data_generating_processes.py  ml_tasks.py
tests/: assumption_test.py  continous_correction.py  test_correction_estimator.py  test_data_generating_processes.py  test_data_generators.py  test_error_generators.py  test_random_data_generators.py
utils/: data_generating_processes.py  dependence_funcs.py
