[project]
name = "loglinearcorrection"
version = "0.1.0"
description = ""
authors = [
    {name = "Ellen Munroe"},
    {name = "Alexander Newton", email = "a.newton1@lse.ac.uk"},
    {name = "Meet Shah"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.0.0,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "resample (>=1.10.1,<2.0.0)",
    "linearmodels (>=6.1,<7.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "numdifftools (>=0.9.41,<0.10.0)",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^9.0.2"
pytest = "^8.3.5"
hypothesis = "^6.130.4"
sphinx = "^8.2.3"
